# goit-pyweb-hw-12

./: alembic.ini  main.py  pyproject.toml  schemas.py
alembic/versions/: e4b50e656ae0_initial_migration.py
database/: db.py  models.py
migrations/: README
migrations/versions/: 922661760966_init.py
repository/: contacts.py  users.py
routes/: auth.py  contacts.py
services/: auth.py
