[tool.poetry]
name = "goit-pyweb-hw-11"
version = "0.1.0"
description = ""
authors = ["Valentyn Kurta <valentyn.kurta@dataart.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"
pydantic = "^2.8.2"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
